FIX and ADD: fix map, callout shrink and wrap, add typeface and style

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+html, body {
+    font-family: 'Roboto', sans-serif;
+}
+
 #wrapper {
     display: flex;
     /* flex-wrap: wrap; */
@@ -6,16 +12,41 @@
 #map_container {
     width: 760px;
     max-width: 100%;
+    flex-shrink: 0;
 }
 
 #nyc-zipcode-map {
     width: 100%;
+    
 }
 
-#callout {
-    width: 450px;
-    max-width: 100%;
+
+
+#callout_zipcode {
+    margin-bottom: 2.5rem;
 }
+
+#callout_zipcode_text .name {
+    font-size: 1.8rem;
+    margin-bottom: 0.5rem;
+}
+
+#callout_zipcode_text .case_num {
+    font-size: 1.5rem;
+}
+
+#rank_title {
+    margin-left: 28px;
+}
+
+#rank_ol{
+    padding-left: 2rem;
+}
+
+#rank_ol li {
+    margin-bottom: 0.5rem;
+}
+
 
 #rank_ol li, #callout_zipcode {
     display: flex;
@@ -26,6 +57,11 @@
     flex-shrink: 0;
 }
 
+
 h2, h3 {
     margin: 0;
+}
+
+h1, h2, h3, h4, h5, li {
+    cursor: default;
 }
